fix css of wrapping countries cards

--- a/style.css
+++ b/style.css
@@ -110,10 +110,16 @@ body {
   border-radius: 5px;
   box-shadow: 1px 3px 8px -4px rgba(0,0,0,0.4);
   margin-bottom: 2rem;
-  margin-right: 2rem;
+  /* 1st way */
+  width: calc(23% - 0.5rem);
+  margin: 0 1rem;
+  margin-bottom: 2rem;
 }
+/* .container .main .card:nth-child(4) {
+  margin-right: 0;
+} */
 .container .main .card img {
-  width: 17rem;
+  width: 100%;
   height: 11rem;
   object-fit: cover;
 }
